tehlib 0.6.0; use ConfigLoader; version configs